// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom-Aligned states:  Looks right when With a Text element 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
        }
      }
    >
      hi
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#666666",
          "height": 1,
        },
      ]
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "height": 56,
        "marginBottom": 20,
        "opacity": 1,
        "paddingTop": 18,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "AvantGardeGothicITC",
            "fontSize": 14,
            "textAlign": "center",
          },
        ]
      }
    >
      DONE
    </Text>
  </View>
</View>
`;

exports[`Bottom-Aligned states:  Looks right when With an Artist Search Results Component 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "maxWidth": 540,
          "paddingTop": 20,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "flex": 1,
              "maxHeight": 40,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            autoFocus={false}
            clearButtonMode="while-editing"
            keyboardAppearance="dark"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Example"
            placeholderTextColor="#666666"
            rejectResponderTermination={true}
            returnKeyType="search"
            selectionColor="#cccccc"
            style={
              Array [
                Object {
                  "backgroundColor": "black",
                  "color": "white",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 20,
                  "height": 40,
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Banko"
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#666666",
              "height": 1,
            }
          }
        />
      </View>
      <RCTScrollView
        keyboardShouldPersistTaps="always"
        scrollEnabled={null}
        style={
          Object {
            "height": 182,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 17,
                },
              ]
            }
          >
            &gt; 
             
            <Text
              style={
                Array [
                  Object {
                    "color": "#cccccc",
                    "fontFamily": "AGaramondPro-Italic",
                    "fontSize": 17,
                  },
                ]
              }
            >
              Banko
            </Text>
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#666666",
          "height": 1,
        },
      ]
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "height": 56,
        "marginBottom": 20,
        "opacity": 1,
        "paddingTop": 18,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "AvantGardeGothicITC",
            "fontSize": 14,
            "textAlign": "center",
          },
        ]
      }
    >
      DONE
    </Text>
  </View>
</View>
`;
